# jsonlogic-compiler

./: .gitignore  Cargo.toml  README.md
aifc/: Cargo.toml
aifc/java/: Main.java
aifc/java/ch/ubique/aifc/: AifcCompiler.java  AifcCompilerError.java
aifc/src/: lib.rs  main.rs
jsonlogic-theme/aifc/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
jsonlogic-theme/aifc/syntaxes/: aifc.tmLanguage.json
src/: lib.rs  main.rs  parser.rs
web/jlc/: .gitignore  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
web/jlc/js/: aifc.js  editor.js  index.js
web/jlc/src/: lib.rs
web/jlc/static/: index.html
